Fixed Overflowing pfps

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -107,9 +107,11 @@
 	justify-content: center;
 }
 .profileImg {
-	width: 100%;
-	height: 100%;
-    margin: fixed;
+	width: 50%;
+	height: 50%;
+    /* margin: fixed; */
+	margin-top: 1%;
+	margin-left: 23%;
 	border-radius: 50%;
 	border: 2px solid #cacfcf;
 }
